--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -4,11 +4,24 @@ project(Code C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(Code
+        global.h
+
         loggen.c
         loggen.h
+
         Struct/struct_error.h
         Struct/struct_help.h
-        Error/error.h
-        Error/error.c
-        Help/help.c
-        Help/help.h)
+        Struct/struct_init.h
+
+        Error/Error.c
+        Error/Error.h
+        Error/ErrorPub.h
+
+        Help/Help.c
+        Help/Help.h
+        Help/HelpPub.h
+
+        Init/Init.c
+        Init/Init.h
+        Init/InitPub.h
+)
